# BactoCat

./: .gitignore  README.md  environment.yml  kapp_builder.py  pyproject.toml  requirements.txt
.venv310/: pyvenv.cfg
configs/run_kapp_pipeline/: ecoli_homomeric.yaml  ecoli_homomeric_eta.yaml  ecoli_medium_aidaying.yaml  ecoli_medium_faure.yaml  ecoli_medium_test.yaml
configs/scripts/: ecoli_homomeric.yaml
docs/: kapp_pipeline.md  tsne_analysis_guide.md
experiments/: ECOMICS_fluxomics.ipynb  flux_reconciliation.ipynb  kapp_pipeline.ipynb  load_invitro_datasets.ipynb  run_kapp_pipeline.py  tsne_invivo_invitro.ipynb  tsne_variability.ipynb
misc/: GPRs_df_concept.xlsx  config.py  dataset_kinGEMs.py
misc/data/: Crown_fluxomics.xlsx
notebooks/: Bactocat_Demo.ipynb
old_experiments/: FBA_pFBA_comparisons.ipynb  GEM_dict_RCM1_experiments.ipynb  Visualizations_databases.ipynb  databases_experiments.ipynb  ecomics_gem_experiments.ipynb  enzyme_types.ipynb
old_scripts/: compare_FBA.py  enzyme_classification.py  gene_mapper.py
results/: BiGG_Paxdb_matches.csv  Human1_snippet.xlsx  df_bigg_models.csv  enzyme_info_Ecoli.csv  iML1515_enzyme_info.csv
scripts/: ECOMICS_analysis.py  GEM_dict.py  GEM_experiments.ipynb  README.md  Visualizations_databases.ipynb  __init__.py  enzyme_classifier.py  flux_analysis_module.py  flux_reconciliation_module.py  flux_reconciliation_module_2.py  gene_mapper.py  gene_sequence_mapper.py  iML1515_experiments.ipynb  in_vivo_ds_experiments.ipynb  kapp_builder.py  kcat_utils.py  paxdb_mapper.py  run_eta_analysis.py  run_kapp_pipeline.py  test_gem_dict.py  tsne_kcats.py
scripts/FVA_integration/: fvfa.py  fvfa_cplex.py  utils.py
scripts/slurm/: run_kapp_slurm.sh
src/: ECOMICS_analysis.py  __init__.py  config.py  flux_reconciliation_module.py  flux_reconciliation_module_optimality.py  gene_sequence_mapper.py  kapp_builder.py  kcat_utils.py  paxdb_mapper.py  plots.py  run_eta_analysis.py  substrate_mapper.py  tsne_kcats.py  utils.py
src/FVA_analysis/: __init__.py  fvfa_cplex.py  utils.py
src/aida_preprocessing/: aida_to_GEM.py
(+73 files in other folders)
