# --- Project Metadata ---
[project]
name = "bactocat_env"
version = "0.1.0"
requires-python = "~=3.10.0"

# --- Dependencies ---
dependencies = [
    "jupyterlab",
    "pyomo",
    "numpy~=2.0", 
    "rdkit",
    "cobra",
    "pandas",
    "scikit-learn",
    "symengine",
    "matplotlib",
    "seaborn",
    "pyarrow",
    "fastparquet",
    "biopython",
    "fair-esm",
    "torch",
    "docplex",
    "bioservices",
    "mygene",
    "tqdm",
    "pubchempy",
    "dotenv",
    "loguru"
]

# --- uv ---
[tool.uv]
index-url = "https://pypi.org/simple"