# --- Project Metadata ---
[project]
name = "bactocat"
version = "0.1.0"
description = "BactoCat: A pipeline for building kapp datasets from genome-scale metabolic models"
requires-python = "~=3.10.0"

# --- Dependencies ---
dependencies = [
    "jupyterlab",
    "pyomo",
    "numpy~=2.0", 
    "rdkit",
    "cobra",
    "pandas",
    "scikit-learn",
    "symengine",
    "matplotlib",
    "seaborn",
    "pyarrow",
    "fastparquet",
    "biopython",
    "fair-esm",
    "torch",
    "docplex",
    "bioservices",
    "mygene",
    "tqdm",
    "pubchempy",
    "python-dotenv",
    "loguru",
    "pydantic>=2.0",
    "pyyaml",
]

# --- CLI Entry Points ---
[project.scripts]
run-kapp-pipeline = "scripts.run_kapp_pipeline:main"

# --- Build System ---
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# --- Package Discovery ---
[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

# --- uv ---
[tool.uv]
index-url = "https://pypi.org/simple"
